# toapiproxy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  build-app.bat  nul  package.json  release-history.json  start-dev.bat
docs/: build-guide.md
scripts/: build-app.ps1  build-app.sh  build-cli-proxy.ps1  build-cli-proxy.sh  check-security.ps1  check-security.sh  release.ps1
src/: claude-providers.css  claude-providers.js  codex-config.js  codex-overrides.css  codex-overrides.js  droid-models.js  index.html  main.js  services-overrides.css  services-overrides.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.yaml
src-tauri/src/: backend_usage.rs  lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/claude_providers/: mod.rs
src-tauri/src/codex/: mod.rs
src-tauri/src/codex_config/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/droid_models/: mod.rs
src-tauri/src/management/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/thinking_proxy/: mod.rs
src-tauri/src/usage/: mod.rs
src-tauri/src/watcher/: mod.rs
src-tauri/windows/: installer-hooks.nsh
